--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,9 +3,7 @@
     package="com.example.Varsani">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES"/>
-
-
+    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
 
     <application
         android:allowBackup="true"
@@ -16,13 +14,19 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".Applicants.ApplicationDetails"
+            android:exported="false" />
+        <activity
+            android:name=".Applicants.ApplyJob"
+            android:exported="false" />
+        <activity
             android:name=".Staff.ExhibitionManager.Inventory"
             android:exported="false" />
         <activity
             android:name=".Staff.Patron.ViewReceipt"
             android:exported="false" />
         <activity
-            android:name=".Artists.AppliedExhibitions"
+            android:name=".Applicants.AppliedJobs"
             android:exported="false" />
         <activity
             android:name=".Staff.Patron.DonationHistoryDetails"
