--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".Employers.PostJob"
+            android:exported="false" />
+        <activity
             android:name=".Employers.HomeActivity"
             android:exported="false" />
         <activity
