--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="com.example.Varsani">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
 
     <application
@@ -14,6 +14,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
+        <activity
+            android:name=".Employers.JobApplicationDetails"
+            android:exported="false" />
         <activity
             android:name=".Staff.VerificationOfficer.ActiveJobs"
             android:exported="false" />
@@ -305,4 +308,5 @@
             android:name=".Clients.Register"
             android:windowSoftInputMode="stateAlwaysHidden" />
     </application>
+
 </manifest>
