--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".Employers.ShortlistedApplicants"
+            android:exported="false" />
+        <activity
             android:name=".Employers.JobApplicationDetails"
             android:exported="false" />
         <activity
@@ -308,4 +311,5 @@
             android:name=".Clients.Register"
             android:windowSoftInputMode="stateAlwaysHidden" />
     </application>
+
 </manifest>
