--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".Employers.ShortlistedDetails"
+            android:exported="false" />
+        <activity
             android:name=".Employers.ShortlistedApplicants"
             android:exported="false" />
         <activity
